# tt-toolkit

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
tt-toolkit/: Cargo.toml
tt-toolkit/docs/: attributed.md  debruijn_indexed.md  evaluate.md  substitute.md
tt-toolkit/examples/: stlc.rs
tt-toolkit/src/: attribute.rs  context.rs  contextual_eq.rs  debruijn_indexed.rs  evaluate.rs  lib.rs  resolve_vars.rs  substitute.rs
tt-toolkit_derive/: Cargo.toml
tt-toolkit_derive/docs/: debruijn_indexed.md  evaluate.md
tt-toolkit_derive/src/: attribute_derives.rs  attribute_dsl.rs  attributes.rs  debruijn_indexed.rs  evaluate.rs  lib.rs  resolve_vars.rs  substitute.rs  utils.rs
tt-toolkit_derive/src/utils/: attributes.rs  mod.rs
tt-toolkit_derive/tests/: attribute_dsl.rs  bidir_attribute.rs  check_attribute.rs  debruijn_indexed.rs  debruijn_indexed_ignores_metadata.rs  debruijn_indexed_just_a_variable.rs  debruijn_indexed_lambda_expr.rs  debruijn_indexed_recursive_with_variable.rs  evaluate.rs  evaluate_lambda_expr.rs  substitute.rs  substitute_lambda_expr.rs  substitute_recursive_var.rs  substitute_simple_var_wrapper.rs  substitute_unit.rs  substitute_unit_explicit_both.rs  substitute_unit_explicit_other.rs  substitute_unit_explicit_self.rs  synth_attribute.rs
