[package]
name = "tt-toolkit"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dylanbraithwaite/tt-toolkit"
description = "A collection of macros for rapidly prototyping programming languages"

[lib]
name = "ttt"

[dependencies]
tt-toolkit_derive = "0.0.0"
thiserror = "2.0.11"
cons-list = "0.0.3"
