[package]
name = "tt-toolkit_derive"
version = "0.0.0"
edition = "2024"

[lib]
proc-macro = true
name = "ttt_derive"

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
synstructure = "0.13.1"
proc-macro-error = "1.0.4"
spez = "0.1.2"

[dev-dependencies]
tt-toolkit = "0.0.0"
