[package]
name = "tt-toolkit_derive"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dylanbraithwaite/tt-toolkit"
description = "Derive macros for tt-toolkit"

[lib]
proc-macro = true
name = "ttt_derive"

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0"
synstructure = "0.13.1"
proc-macro-error2 = "2.0.1"
derive-syn-parse = "0.2.0"
structmeta = "0.3.0"

[dev-dependencies]
tt-toolkit = "<=0.2.0"
